# opticam

./: .env  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  README.md  dependencies.yml  environment.yaml  full_dependencies.yml  pyproject.toml
.github/workflows/: run-tests.yml
Tutorials/: applying_corrections.ipynb  backgrounds.ipynb  basic_usage.ipynb  create_flats.py  create_test_data.py  finders.ipynb  local_backgrounds.ipynb  reducer.ipynb
Tutorials/Reducer/: background.ipynb  catalogs.ipynb  finder.ipynb
Tutorials/Test_Data/: create_test_data.py  reduce_test_data.ipynb
docs/: README.md  conf.py  index.rst
docs/tutorials/: applying_corrections.ipynb  backgrounds.ipynb  basic_usage.ipynb  finders.ipynb  local_backgrounds.ipynb  reduction.ipynb  timing_methods.ipynb
opticam/: __init__.py  align.py  finders.py  noise.py  photometers.py  reducer.py
opticam/analysis/: analyzer.py  differential_photometer.py
opticam/background/: global_background.py  local_background.py
opticam/correctors/: flat_field_corrector.py  noise.py
opticam/fitting/: models.py  routines.py
opticam/models/: fittable_models.py
opticam/plotting/: gifs.py  plots.py
opticam/utils/: constants.py  data_checks.py  fits_handlers.py  generate.py  helpers.py  image_helpers.py  logging.py  (+1 more)
opticam_new/: __init__.py  align.py  analyser.py  background.py  catalog.py  catalogue.py  corrector.py  correctors.py  differential_photometer.py  finder.py  finders.py  generate.py  helpers.py  local_background.py  photometer.py  photometers.py  photometry.py  reducer.py
tests/: test.py
(+22 files in other folders)
